[gd_scene load_steps=11 format=3 uid="uid://bjgvslwj6g3e4"]

[ext_resource type="Theme" uid="uid://bdvqttox02ees" path="res://Resources/ui_theme.tres" id="1_rtqjh"]
[ext_resource type="PackedScene" uid="uid://dn0cox5eg0rr2" path="res://Scenes/tilemap.tscn" id="1_wfsyx"]
[ext_resource type="Script" path="res://Scripts/DifficultyMenu.gd" id="2_bqa4e"]
[ext_resource type="Texture2D" uid="uid://rbla2mcbvky0" path="res://Assets/vfx/neutral_light.png" id="2_kj573"]
[ext_resource type="Script" path="res://Scripts/SoundButton.gd" id="3_1wlmu"]
[ext_resource type="AudioStream" uid="uid://cb1o0jv8mc761" path="res://Assets/sound/button_hover.ogg" id="4_1ce6n"]

[sub_resource type="LabelSettings" id="LabelSettings_0uxiv"]
font_size = 40
font_color = Color(0.501961, 0.572549, 0.737255, 1)
shadow_size = 4
shadow_color = Color(0.176471, 0.14902, 0.25098, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_idb0v"]
colors = PackedColorArray(1, 1, 0.713726, 0.568627, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_18s0m"]
gradient = SubResource("Gradient_idb0v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mmxph"]
emission_shape = 1
emission_sphere_radius = 2.95
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 1, 0.713726, 0.568627)
color_ramp = SubResource("GradientTexture1D_18s0m")

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rtqjh")
script = ExtResource("2_bqa4e")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.253
anchor_top = 0.224
anchor_right = 0.747
anchor_bottom = 0.344
offset_left = 0.0799866
offset_top = 0.160004
offset_right = -0.0800171
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
text = "Soul Harvester"
label_settings = SubResource("LabelSettings_0uxiv")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button_Easy" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47
anchor_top = 0.444
anchor_right = 0.53
anchor_bottom = 0.489
offset_left = -0.300018
offset_top = 0.159988
offset_right = 0.299988
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.596078, 0.980392, 1, 1)
theme_override_colors/font_pressed_color = Color(0.384314, 0.627451, 0.639216, 1)
theme_override_colors/font_hover_color = Color(0.384314, 0.627451, 0.639216, 1)
theme_override_colors/font_focus_color = Color(0.596078, 0.980392, 1, 1)
text = "Easy"
script = ExtResource("3_1wlmu")
hover_sound = ExtResource("4_1ce6n")
metadata/_edit_use_anchors_ = true

[node name="Button_Normal" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449688
anchor_top = 0.532889
anchor_right = 0.550313
anchor_bottom = 0.577889
offset_left = -0.300018
offset_top = 0.159988
offset_right = 0.299988
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 1, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(0.360784, 0.6, 0.4, 1)
theme_override_colors/font_hover_color = Color(0.360784, 0.6, 0.4, 1)
theme_override_colors/font_focus_color = Color(0.6, 1, 0.666667, 1)
text = "Normal"
script = ExtResource("3_1wlmu")
hover_sound = ExtResource("4_1ce6n")
metadata/_edit_use_anchors_ = true

[node name="Button_Hard" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449688
anchor_top = 0.621778
anchor_right = 0.550313
anchor_bottom = 0.666778
offset_left = -0.300018
offset_top = 0.159988
offset_right = 0.299988
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.360784, 0.360784, 1)
theme_override_colors/font_hover_color = Color(0.6, 0.360784, 0.360784, 1)
theme_override_colors/font_focus_color = Color(1, 0.6, 0.6, 1)
text = "Hard"
script = ExtResource("3_1wlmu")
hover_sound = ExtResource("4_1ce6n")
metadata/_edit_use_anchors_ = true

[node name="Button_Extreme" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449688
anchor_top = 0.710667
anchor_right = 0.550313
anchor_bottom = 0.755667
offset_left = -0.300018
offset_top = 0.159988
offset_right = 0.299988
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.6, 0.905882, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.360784, 0.545098, 1)
theme_override_colors/font_hover_color = Color(0.6, 0.360784, 0.545098, 1)
theme_override_colors/font_focus_color = Color(1, 0.6, 0.905882, 1)
text = "Extreme"
script = ExtResource("3_1wlmu")
hover_sound = ExtResource("4_1ce6n")
metadata/_edit_use_anchors_ = true

[node name="Button_Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416094
anchor_top = 0.799555
anchor_right = 0.583906
anchor_bottom = 0.844555
offset_left = -0.300018
offset_top = 0.159988
offset_right = 0.299988
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2
text = "Back to Menu"
script = ExtResource("3_1wlmu")
hover_sound = ExtResource("4_1ce6n")
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_wfsyx")]
z_index = -10
layer_0/name = "Bricks"
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(131073, 196609, 2, 196609, 196609, 2, 262145, 196609, 2, 327681, 196609, 2, 393217, 196609, 2, 458753, 196609, 2, 524289, 196609, 2, 589825, 196609, 2, 655361, 196609, 2, 720897, 196609, 2, 786433, 196609, 2, 851969, 196609, 2, 917505, 196609, 2, 983041, 196609, 2, 1048577, 196609, 2, 1114113, 196609, 2, 1179649, 196609, 2, 1245187, 393217, 1, 1310727, 393217, 1, 1245186, 131073, 1, 1310724, 131073, 1, 1310725, 131073, 1, 1310726, 131073, 1, 1310723, 393217, 2, 1245185, 393217, 2, 1310721, 131073, 2, 1310722, 131073, 2, 1376257, 131073, 2, 1376258, 131073, 2, 1376259, 131073, 2, 1376260, 131073, 2, 1376261, 131073, 2, 1376262, 131073, 2, 1441793, 131073, 2, 1441794, 131073, 2, 1441795, 131073, 2, 1441796, 131073, 2, 1441797, 131073, 2, 1441798, 131073, 2, 1441799, 131073, 2, 1441800, 131073, 2, 1441801, 131073, 2, 1441802, 131073, 2, 1441803, 131073, 2, 1441804, 131073, 2, 1441805, 131073, 2, 1441806, 131073, 2, 1441807, 131073, 2, 1441808, 131073, 2, 1441809, 131073, 2, 1441810, 131073, 2, 1441811, 131073, 2, 1441812, 131073, 2, 1441813, 131073, 2, 1441814, 131073, 2, 1441815, 131073, 2, 1441816, 131073, 2, 1441817, 131073, 2, 1441818, 131073, 2, 1441819, 131073, 2, 1441820, 131073, 2, 1441821, 131073, 2, 1441822, 131073, 2, 1441823, 131073, 2, 1441824, 131073, 2, 1441825, 131073, 2, 1441826, 131073, 2, 1441827, 131073, 2, 1441828, 131073, 2, 1441829, 131073, 2, 1441830, 131073, 2, 1441831, 131073, 2, 1376265, 131073, 1, 1376284, 131073, 1, 1376283, 131073, 1, 1376282, 131073, 1, 1376281, 131073, 1, 1376280, 131073, 1, 1376279, 131073, 1, 1376278, 131073, 1, 1376277, 131073, 1, 1376276, 131073, 1, 1376275, 131073, 1, 1376274, 131073, 1, 1376273, 131073, 1, 1376272, 131073, 1, 1376271, 131073, 1, 1376270, 131073, 1, 1376269, 131073, 1, 1376268, 131073, 1, 1376267, 131073, 1, 1376266, 131073, 1, 1376263, 393217, 2, 1376264, 131073, 1, 1179686, 65537, 2, 1114150, 65537, 2, 1048614, 65537, 2, 983078, 65537, 2, 917542, 65537, 2, 852006, 65537, 2, 786470, 65537, 2, 720934, 65537, 2, 655398, 65537, 2, 589862, 65537, 2, 524326, 65537, 2, 458790, 65537, 2, 393254, 65537, 2, 327718, 65537, 2, 262182, 65537, 2, 196646, 65537, 2, 131110, 65537, 2, 1245222, 327681, 2, 1310756, 327681, 2, 1376288, 327681, 2, 1245221, 131073, 1, 1310755, 131073, 1, 1310754, 131073, 1, 1310753, 131073, 1, 1376287, 131073, 1, 1376286, 131073, 1, 1376285, 131073, 1, 1310752, 327681, 1, 1245220, 327681, 1, 131072, 131073, 2, 196608, 131073, 2, 262144, 131073, 2, 327680, 131073, 2, 393216, 131073, 2, 458752, 131073, 2, 524288, 131073, 2, 589824, 131073, 2, 655360, 131073, 2, 720896, 131073, 2, 786432, 131073, 2, 851968, 131073, 2, 917504, 131073, 2, 983040, 131073, 2, 1048576, 131073, 2, 1114112, 131073, 2, 1179648, 131073, 2, 1245184, 131073, 2, 1310720, 131073, 2, 1376256, 131073, 2, 1441792, 131073, 2, 1376289, 131073, 2, 1376290, 131073, 2, 1376291, 131073, 2, 1376292, 131073, 2, 1376293, 131073, 2, 1376294, 131073, 2, 1376295, 131073, 2, 196647, 131073, 2, 131111, 131073, 2, 262183, 131073, 2, 327719, 131073, 2, 393255, 131073, 2, 458791, 131073, 2, 524327, 131073, 2, 589863, 131073, 2, 655399, 131073, 2, 720935, 131073, 2, 786471, 131073, 2, 852007, 131073, 2, 917543, 131073, 2, 983079, 131073, 2, 1048615, 131073, 2, 1114151, 131073, 2, 1179687, 131073, 2, 1245223, 131073, 2, 1310759, 131073, 2, 1310758, 131073, 2, 1310757, 131073, 2, 65537, 196609, 2, 65574, 65537, 2, 39, 131073, 2, 65575, 131073, 2, 0, 131073, 2, 65536, 131073, 2, 2, 131073, 3, 3, 131073, 3, 4, 131073, 3, 5, 131073, 3, 6, 131073, 3, 7, 131073, 3, 8, 131073, 3, 9, 131073, 3, 10, 131073, 3, 11, 131073, 3, 12, 131073, 3, 13, 131073, 3, 14, 131073, 3, 15, 131073, 3, 16, 131073, 3, 17, 131073, 3, 18, 131073, 3, 19, 131073, 3, 20, 131073, 3, 21, 131073, 3, 22, 131073, 3, 23, 131073, 3, 24, 131073, 3, 25, 131073, 3, 26, 131073, 3, 27, 131073, 3, 28, 131073, 3, 29, 131073, 3, 30, 131073, 3, 31, 131073, 3, 32, 131073, 3, 33, 131073, 3, 34, 131073, 3, 35, 131073, 3, 36, 131073, 3, 37, 131073, 3, 1, 196609, 7, 38, 65537, 7)
layer_1/name = "Objects"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(917534, 589825, 12, 1310747, 655361, 10, 1310748, 655361, 10, 1245212, 655361, 10, 1310734, 655361, 10, 1310735, 655361, 10, 1245218, 655361, 10, 1310738, 720897, 12, 1245217, 786433, 12, 1310730, 786433, 12, 1179650, 720897, 12, 1310750, 720897, 12, 1245189, 655361, 12, 1179685, 655361, 12, 1310740, 786433, 9, 1310732, 786433, 9, 1245188, 786433, 9, 327684, 458753, 12, 65541, 131073, 12, 131077, 131073, 12, 196613, 131073, 12, 262149, 131073, 12, 327685, 524289, 12, 262150, 458753, 12, 327686, 458753, 13, 65543, 131073, 12, 131079, 131073, 12, 196615, 131073, 12, 262151, 524289, 12, 262152, 589825, 12, 196639, 458753, 12, 65568, 131073, 12, 131104, 131073, 12, 196640, 524289, 12, 196641, 589825, 12, 262177, 589825, 13, 65570, 131073, 12, 131106, 131073, 12, 196642, 131073, 12, 262178, 524289, 12, 262179, 589825, 12, 393220, 458753, 13, 393221, 524289, 13, 393222, 589825, 13, 327687, 524289, 13, 327688, 589825, 13, 65548, 262145, 12, 65549, 327681, 12, 65550, 393217, 12, 65562, 262145, 12, 65563, 327681, 12, 65564, 393217, 12, 262175, 458753, 13, 262176, 524289, 13, 327713, 458753, 13, 327714, 524289, 13, 327715, 589825, 13, 1310742, 262145, 13, 1310743, 327681, 13, 1310744, 393217, 13)
layer_2/name = "Backgrounds"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -12
layer_2/tile_data = PackedInt32Array(458765, 786433, 4, 327693, 786433, 3, 786434, 851969, 2, 1048578, 851969, 3, 917507, 786433, 6, 851971, 851969, 1, 65540, 655361, 7, 983044, 786433, 7, 1114116, 851969, 3, 1114117, 655361, 4, 393221, 786433, 1, 131077, 786433, 4, 131078, 851969, 3, 1048582, 720897, 3, 1245190, 720897, 6, 1048583, 786433, 2, 983047, 720897, 7, 851975, 851969, 3, 131080, 786433, 2, 655368, 720897, 7, 1310728, 655361, 6, 1048585, 786433, 6, 196617, 720897, 7, 327690, 786433, 6, 589834, 851969, 1, 1179658, 851969, 2, 1245194, 851969, 1, 1310730, 851969, 3, 327691, 720897, 6, 131083, 655361, 7, 65547, 786433, 3, 1114124, 655361, 6, 1114125, 655361, 6, 1048589, 720897, 2, 786446, 720897, 6, 655374, 786433, 6, 524302, 786433, 2, 458766, 851969, 1, 131086, 786433, 4, 65550, 720897, 5, 589839, 720897, 5, 1179663, 786433, 1, 917520, 786433, 7, 458768, 720897, 6, 327696, 720897, 6, 65553, 786433, 2, 1048593, 720897, 5, 1048594, 851969, 2, 917522, 786433, 4, 851986, 655361, 7, 196626, 786433, 6, 131090, 786433, 1, 983059, 720897, 7, 1179666, 720897, 6, 1245202, 786433, 2, 1310739, 786433, 3, 1245204, 786433, 6, 983060, 655361, 6, 917524, 851969, 1, 458772, 786433, 3, 393236, 786433, 7, 65556, 851969, 1, 327701, 786433, 6, 524309, 720897, 5, 1179669, 786433, 6, 1179670, 720897, 7, 1048598, 786433, 4, 786454, 720897, 7, 786455, 786433, 3, 851991, 786433, 6, 1179671, 720897, 6, 917528, 786433, 4, 262168, 786433, 2, 65560, 720897, 6, 131097, 786433, 3, 196633, 720897, 6, 393241, 655361, 7, 983065, 786433, 2, 1114137, 786433, 5, 1179673, 720897, 7, 1310745, 786433, 3, 1114138, 786433, 1, 917530, 720897, 7, 786458, 786433, 4, 655387, 786433, 5, 1245211, 851969, 1, 1048604, 786433, 7, 589852, 851969, 3, 458780, 786433, 3, 851997, 786433, 3, 983069, 851969, 2, 917534, 851969, 1, 393246, 851969, 3, 196639, 786433, 5, 524319, 851969, 3, 851999, 851969, 3, 1310751, 720897, 6, 1048608, 786433, 5, 983072, 720897, 6, 786464, 786433, 5, 393248, 786433, 4, 65568, 786433, 6, 262177, 786433, 3, 458785, 786433, 2, 1179682, 720897, 6, 852002, 786433, 6, 1179684, 720897, 6, 917540, 786433, 4, 852004, 786433, 7, 393252, 851969, 3, 65572, 851969, 2, 327717, 655361, 6, 458789, 786433, 6, 655397, 851969, 3, 786442, 131073, 2, 720906, 131073, 2, 655370, 131073, 2, 655369, 131073, 2, 589833, 131073, 2, 524297, 131073, 2, 458761, 131073, 2, 393225, 131073, 2, 327689, 131073, 2, 262153, 131073, 2, 262152, 131073, 2, 196616, 131073, 2, 196615, 131073, 2, 131079, 131073, 2, 65543, 131073, 2, 65541, 131073, 2, 65542, 131073, 2, 65544, 131073, 2, 65545, 131073, 2, 131081, 131073, 2, 131082, 131073, 2, 65546, 131073, 2, 196618, 655361, 1, 262154, 655361, 2, 262155, 720897, 2, 196619, 720897, 1, 196620, 131073, 2, 131084, 131073, 2, 65548, 131073, 2, 65549, 131073, 2, 65551, 131073, 2, 131087, 131073, 2, 196623, 131073, 2, 196622, 131073, 2, 196621, 131073, 2, 131085, 131073, 2, 262157, 131073, 2, 262156, 131073, 2, 327692, 131073, 2, 393228, 131073, 2, 393227, 131073, 2, 393226, 131073, 2, 458762, 131073, 2, 524298, 131073, 2, 524299, 131073, 2, 458763, 131073, 2, 458764, 131073, 2, 524300, 131073, 2, 589836, 131073, 2, 589835, 131073, 2, 655371, 131073, 2, 720907, 131073, 2, 786443, 131073, 2, 851979, 131073, 2, 851978, 131073, 2, 851977, 131073, 2, 786441, 131073, 2, 720905, 131073, 2, 720904, 131073, 2, 720903, 131073, 2, 655367, 131073, 2, 589831, 131073, 2, 524295, 131073, 2, 458759, 131073, 2, 393223, 131073, 2, 327687, 131073, 2, 262151, 131073, 2, 262150, 131073, 2, 196614, 131073, 2, 196613, 131073, 2, 196612, 131073, 2, 131076, 131073, 2, 131075, 131073, 2, 65539, 131073, 2, 65538, 131073, 2, 131074, 131073, 2, 196610, 131073, 2, 262146, 131073, 2, 327682, 131073, 2, 393218, 131073, 2, 458754, 131073, 2, 524290, 131073, 2, 589826, 131073, 2, 655362, 131073, 2, 1245189, 131073, 2, 1179653, 131073, 2, 1179652, 131073, 2, 1179651, 131073, 2, 1114115, 131073, 2, 1048579, 131073, 2, 983043, 131073, 2, 983042, 131073, 2, 917506, 131073, 2, 851970, 131073, 2, 1048580, 131073, 2, 1048581, 655361, 3, 983045, 131073, 2, 917509, 131073, 2, 851973, 131073, 2, 786437, 131073, 2, 720901, 131073, 2, 655365, 131073, 2, 589829, 131073, 2, 524293, 131073, 2, 458757, 131073, 2, 458756, 131073, 2, 393220, 131073, 2, 327684, 131073, 2, 262148, 131073, 2, 262147, 131073, 2, 196611, 131073, 2, 327683, 131073, 2, 393219, 131073, 2, 458755, 131073, 2, 524291, 131073, 2, 589827, 131073, 2, 655363, 131073, 2, 720899, 131073, 2, 720898, 131073, 2, 786435, 131073, 2, 786436, 131073, 2, 720900, 131073, 2, 655364, 131073, 2, 589828, 131073, 2, 524292, 131073, 2, 851972, 131073, 2, 917508, 131073, 2, 262149, 131073, 2, 327685, 131073, 2, 327686, 131073, 2, 393222, 131073, 2, 458758, 131073, 2, 524294, 131073, 2, 589830, 131073, 2, 655366, 131073, 2, 720902, 131073, 2, 786438, 131073, 2, 851974, 131073, 2, 917510, 131073, 2, 983046, 131073, 2, 917511, 131073, 2, 917512, 131073, 2, 851976, 131073, 2, 786440, 131073, 2, 786439, 131073, 2, 983048, 131073, 2, 1048584, 131073, 2, 1114120, 131073, 2, 1114119, 131073, 2, 1114118, 720897, 4, 1179654, 131073, 2, 1179655, 131073, 2, 1245191, 131073, 2, 1310727, 131073, 2, 1245192, 131073, 2, 1179656, 131073, 2, 1179657, 131073, 2, 1114121, 131073, 2, 1114122, 131073, 2, 1048586, 131073, 2, 983050, 131073, 2, 917514, 131073, 2, 917513, 131073, 2, 983049, 131073, 2, 917515, 131073, 2, 983051, 131073, 2, 1048587, 131073, 2, 1114123, 131073, 2, 1179659, 131073, 2, 1245195, 131073, 2, 1310731, 131073, 2, 1310729, 131073, 2, 1245193, 131073, 2, 1310732, 131073, 2, 1245196, 131073, 2, 1179660, 131073, 2, 1179661, 131073, 2, 1245197, 131073, 2, 1310733, 131073, 2, 1310734, 131073, 2, 1245198, 131073, 2, 1179662, 131073, 2, 1114126, 131073, 2, 1048590, 131073, 2, 983054, 131073, 2, 917518, 131073, 2, 851982, 131073, 2, 851981, 131073, 2, 786445, 131073, 2, 720909, 131073, 2, 655373, 131073, 2, 589837, 131073, 2, 524301, 131073, 2, 589838, 131073, 2, 655372, 131073, 2, 720908, 131073, 2, 786444, 131073, 2, 851980, 131073, 2, 917516, 131073, 2, 983052, 655361, 1, 1048588, 655361, 2, 983053, 720897, 1, 917517, 131073, 2, 720910, 131073, 2, 720911, 131073, 2, 655375, 131073, 2, 655376, 131073, 2, 589840, 131073, 2, 524304, 131073, 2, 524303, 131073, 2, 458767, 131073, 2, 393231, 131073, 2, 327695, 131073, 2, 262159, 131073, 2, 262158, 131073, 2, 327694, 131073, 2, 393230, 131073, 2, 393229, 131073, 2, 262160, 131073, 2, 196624, 131073, 2, 131088, 131073, 2, 65552, 131073, 2, 65554, 131073, 2, 65555, 131073, 2, 65557, 131073, 2, 131093, 131073, 2, 131092, 131073, 2, 131091, 131073, 2, 196627, 131073, 2, 262163, 131073, 2, 262162, 131073, 2, 262161, 131073, 2, 196625, 131073, 2, 131089, 131073, 2, 327697, 131073, 2, 393233, 131073, 2, 393232, 131073, 2, 458769, 131073, 2, 524305, 131073, 2, 589841, 131073, 2, 655377, 131073, 2, 720913, 131073, 2, 720912, 131073, 2, 786448, 131073, 2, 786447, 131073, 2, 851983, 131073, 2, 917519, 131073, 2, 983055, 131073, 2, 1048591, 131073, 2, 1114127, 131073, 2, 1114128, 131073, 2, 1048592, 131073, 2, 983056, 131073, 2, 983057, 131073, 2, 917521, 131073, 2, 851985, 131073, 2, 786449, 131073, 2, 786450, 131073, 2, 720914, 131073, 2, 655378, 131073, 2, 589842, 131073, 2, 524306, 131073, 2, 458770, 131073, 2, 393234, 131073, 2, 327698, 131073, 2, 327699, 131073, 2, 393235, 131073, 2, 458771, 131073, 2, 524307, 131073, 2, 589843, 131073, 2, 655379, 131073, 2, 720915, 131073, 2, 786451, 131073, 2, 851987, 131073, 2, 917523, 131073, 2, 851988, 131073, 2, 786452, 131073, 2, 720916, 131073, 2, 655380, 131073, 2, 589844, 131073, 2, 524308, 131073, 2, 589845, 131073, 2, 655381, 131073, 2, 720917, 131073, 2, 786453, 131073, 2, 851989, 131073, 2, 917525, 131073, 2, 983061, 131073, 2, 1048597, 131073, 2, 1048596, 131073, 2, 1048595, 131073, 2, 1114131, 131073, 2, 1114130, 131073, 2, 1114129, 131073, 2, 1179665, 131073, 2, 1179664, 131073, 2, 1245200, 131073, 2, 1245199, 131073, 2, 1310735, 131073, 2, 1310736, 131073, 2, 1310737, 131073, 2, 1245201, 131073, 2, 1310738, 131073, 2, 1310740, 131073, 2, 1310741, 131073, 2, 1245205, 131073, 2, 1245206, 131073, 2, 1310742, 131073, 2, 1310743, 131073, 2, 1245207, 131073, 2, 1245208, 131073, 2, 1179672, 131073, 2, 1114136, 131073, 2, 1048600, 131073, 2, 983064, 131073, 2, 983063, 131073, 2, 917527, 131073, 2, 917526, 131073, 2, 851990, 131073, 2, 983062, 131073, 2, 1048599, 131073, 2, 1114135, 131073, 2, 1114134, 131073, 2, 1114133, 131073, 2, 1114132, 131073, 2, 1179668, 131073, 2, 1179667, 131073, 2, 1245203, 131073, 2, 1048601, 131073, 2, 1048602, 655361, 2, 983066, 655361, 1, 983067, 720897, 1, 917531, 131073, 2, 851995, 131073, 2, 786459, 131073, 2, 720923, 131073, 2, 720922, 131073, 2, 655386, 131073, 2, 589850, 131073, 2, 524314, 131073, 2, 458778, 131073, 2, 393242, 131073, 2, 327706, 131073, 2, 262170, 131073, 2, 196634, 131073, 2, 131098, 131073, 2, 65562, 131073, 2, 65561, 131073, 2, 65563, 131073, 2, 65564, 131073, 2, 131100, 131073, 2, 131099, 131073, 2, 196635, 131073, 2, 262171, 131073, 2, 327707, 131073, 2, 393243, 131073, 2, 458779, 131073, 2, 524315, 131073, 2, 589851, 131073, 2, 524316, 131073, 2, 524317, 131073, 2, 458781, 131073, 2, 393245, 131073, 2, 327709, 131073, 2, 262173, 720897, 2, 196637, 720897, 1, 131101, 131073, 2, 65565, 131073, 2, 65566, 131073, 2, 65567, 131073, 2, 131103, 131073, 2, 131102, 131073, 2, 196638, 131073, 2, 262174, 131073, 2, 327710, 131073, 2, 327711, 131073, 2, 262175, 131073, 2, 262176, 131073, 2, 196640, 131073, 2, 131104, 131073, 2, 131105, 131073, 2, 65569, 131073, 2, 65570, 131073, 2, 131106, 131073, 2, 196642, 131073, 2, 196641, 131073, 2, 262178, 131073, 2, 327714, 131073, 2, 327713, 131073, 2, 327712, 131073, 2, 393249, 131073, 2, 393250, 131073, 2, 458786, 131073, 2, 524322, 131073, 2, 524321, 131073, 2, 524320, 131073, 2, 458784, 131073, 2, 458783, 131073, 2, 393247, 131073, 2, 458782, 131073, 2, 524318, 131073, 2, 589854, 131073, 2, 589853, 131073, 2, 655389, 131073, 2, 655388, 131073, 2, 720924, 131073, 2, 786460, 131073, 2, 851996, 131073, 2, 917532, 131073, 2, 983068, 131073, 2, 917533, 131073, 2, 786461, 131073, 2, 720925, 131073, 2, 720926, 131073, 2, 655390, 131073, 2, 655391, 131073, 2, 589855, 131073, 2, 589856, 131073, 2, 655392, 131073, 2, 720928, 131073, 2, 720927, 131073, 2, 786463, 131073, 2, 786462, 131073, 2, 851998, 131073, 2, 720929, 131073, 2, 655393, 131073, 2, 589857, 131073, 2, 589858, 131073, 2, 655394, 131073, 2, 720930, 131073, 2, 786466, 131073, 2, 786465, 131073, 2, 852001, 131073, 2, 852000, 131073, 2, 917536, 131073, 2, 917535, 131073, 2, 983071, 131073, 2, 983070, 131073, 2, 1048606, 131073, 2, 1048605, 131073, 2, 1114141, 131073, 2, 1114140, 131073, 2, 1114139, 131073, 2, 1048603, 720897, 2, 1179675, 131073, 2, 1179674, 131073, 2, 1245210, 131073, 2, 1245209, 131073, 2, 1310746, 131073, 2, 1310744, 131073, 2, 1310747, 131073, 2, 1310748, 131073, 2, 1245212, 131073, 2, 1179676, 131073, 2, 1179677, 131073, 2, 1245213, 131073, 2, 1310749, 131073, 2, 1310750, 131073, 2, 1245214, 131073, 2, 1179678, 131073, 2, 1114142, 131073, 2, 1114143, 131073, 2, 1048607, 131073, 2, 1179679, 131073, 2, 1245215, 131073, 2, 1245216, 131073, 2, 1179680, 131073, 2, 1114144, 131073, 2, 1114145, 655361, 4, 1048609, 655361, 3, 983073, 131073, 2, 917537, 131073, 2, 917538, 131073, 2, 983074, 131073, 2, 1048610, 720897, 3, 1114146, 720897, 4, 1114147, 131073, 2, 1048611, 131073, 2, 983075, 131073, 2, 917539, 131073, 2, 852003, 131073, 2, 786467, 131073, 2, 720931, 131073, 2, 655395, 131073, 2, 589859, 131073, 2, 524323, 131073, 2, 458787, 131073, 2, 393251, 131073, 2, 327715, 131073, 2, 262179, 131073, 2, 196643, 131073, 2, 131107, 131073, 2, 65571, 131073, 2, 131108, 131073, 2, 196644, 131073, 2, 262180, 131073, 2, 327716, 131073, 2, 262181, 131073, 2, 196645, 131073, 2, 131109, 131073, 2, 65573, 131073, 2, 393253, 131073, 2, 524325, 131073, 2, 524324, 131073, 2, 458788, 131073, 2, 589860, 131073, 2, 655396, 131073, 2, 720932, 131073, 2, 786468, 131073, 2, 786469, 131073, 2, 720933, 131073, 2, 589861, 131073, 2, 852005, 131073, 2, 917541, 131073, 2, 983077, 131073, 2, 983076, 131073, 2, 1048612, 131073, 2, 1114148, 131073, 2, 1114149, 131073, 2, 1048613, 131073, 2, 1179685, 131073, 2, 1245220, 131073, 2, 1245219, 131073, 2, 1179683, 131073, 2, 1245218, 131073, 2, 1245217, 131073, 2, 1179681, 131073, 2, 1310752, 131073, 2, 196636, 655361, 1, 262172, 655361, 2, 327708, 131073, 2, 393244, 131073, 2, 262169, 131073, 2, 327705, 131073, 2, 327704, 131073, 2, 327703, 131073, 2, 262167, 131073, 2, 196631, 131073, 2, 131095, 131073, 2, 65559, 131073, 2, 65558, 131073, 2, 131094, 131073, 2, 196630, 131073, 2, 196629, 131073, 2, 196628, 131073, 2, 262164, 131073, 2, 327700, 131073, 2, 262165, 131073, 2, 262166, 131073, 2, 327702, 131073, 2, 393238, 131073, 2, 393237, 131073, 2, 458773, 131073, 2, 458774, 131073, 2, 524310, 131073, 2, 589846, 131073, 2, 655382, 131073, 2, 720918, 131073, 2, 720919, 131073, 2, 655383, 131073, 2, 589847, 131073, 2, 524311, 131073, 2, 458775, 131073, 2, 393239, 131073, 2, 393240, 131073, 2, 458776, 131073, 2, 524312, 131073, 2, 589848, 131073, 2, 655384, 131073, 2, 720920, 131073, 2, 786456, 131073, 2, 851992, 131073, 2, 851993, 131073, 2, 786457, 131073, 2, 720921, 131073, 2, 655385, 131073, 2, 589849, 131073, 2, 524313, 131073, 2, 458777, 131073, 2, 917529, 131073, 2, 851994, 131073, 2, 131096, 131073, 2, 196632, 131073, 2, 851984, 131073, 2, 983058, 131073, 2, 1114114, 131073, 2, 1179650, 131073, 2, 1245187, 131073, 2, 1245188, 131073, 2, 327688, 131073, 2, 393224, 131073, 2, 458760, 131073, 2, 524296, 131073, 2, 589832, 131073, 2)

[node name="LightEffect" type="GPUParticles2D" parent="TileMap"]
position = Vector2(176, 64)
amount = 2
process_material = SubResource("ParticleProcessMaterial_mmxph")
texture = ExtResource("2_kj573")
lifetime = 2.0
randomness = 1.0

[node name="LightEffect2" type="GPUParticles2D" parent="TileMap"]
position = Vector2(464, 64)
amount = 3
process_material = SubResource("ParticleProcessMaterial_mmxph")
texture = ExtResource("2_kj573")
lifetime = 2.0
randomness = 1.0

[node name="LightEffect3" type="GPUParticles2D" parent="TileMap"]
position = Vector2(208, 256)
amount = 3
process_material = SubResource("ParticleProcessMaterial_mmxph")
texture = ExtResource("2_kj573")
lifetime = 2.0
randomness = 1.0

[node name="LightEffect4" type="GPUParticles2D" parent="TileMap"]
position = Vector2(432, 256)
amount = 2
process_material = SubResource("ParticleProcessMaterial_mmxph")
texture = ExtResource("2_kj573")
lifetime = 2.0
randomness = 1.0

[connection signal="pressed" from="Button_Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Button_Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="Button_Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Button_Extreme" to="." method="_on_extreme_pressed"]
[connection signal="pressed" from="Button_Back" to="." method="_on_back_pressed"]
