extends Control

func _on_easy_pressed():
	pass # Replace with function body.


func _on_normal_pressed():
	pass # Replace with function body.


func _on_hard_pressed():
	pass # Replace with function body.


func _on_extreme_pressed():
	pass # Replace with function body.


func _on_back_pressed():
	get_tree().change_scene_to_file("res://Scenes/start_menu.tscn")
